<?xml version="1.0"?>
<package format="2">
  <name>etasl_ros_controllers</name>
  <version>0.0.1</version>
  <description>etasl_example_controllers provides example code for controlling robots with eTaSl and ros_control</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>LGPL-3.0</license>

  <url type="repository">https://github.com/tingelst/etasl_ros_control</url>
  <url type="bugtracker">https://github.com/tingelst/etasl_ros_control/issues</url>
  <author>Lars Tingelstad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <depend>expressiongraph_lua</depend>
  <depend>expressiongraph_context</depend>
  <depend>expressiongraph_context_lua</depend>
  <depend>expressiongraph_solver_qpoases</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/etasl_ros_controllers_plugin.xml"/>
  </export>
</package>